--- a/FX.Mobile.DeveloperTools/Controls/ActionPanel.resx
+++ b/FX.Mobile.DeveloperTools/Controls/ActionPanel.resx
@@ -118,27 +118,23 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="buttonBrowse.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonBack.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAAAOhJREFUSEtjGD7ArWnLYdemLfdxYY/6bTJQpeQBkCFAS/7jwu712xWgSskDhCwA
-        yve7Nm5uIBbb168XgBoNAYQsIBVj+JjmFrg1bi7A5lVyMUYQDV3g2rS5261x63xaYQZgeO3GFknUwKCE
-        A0o9/dgkqYFdG7dsZnBp2pSCTZIaGBT8DC71W02wSVIDA0MngcG+fj8HNklqYJDjoSlpy3VsCijF9vWr
-        eMAWuDVuWY1NASUYnIJgAJS1sSmiBINTEAy4NW0KwKaIEgxOQTDgVr9JA5siSjA4BSEDoOBndEWUYHgK
-        GuKAgQEAJqx99XwUMPIAAAAASUVORK5CYII=
-</value>
-  </data>
-  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAAAOVJREFUOE9joCk4aWHRDcSLoVzSwBlLS41T5ua/T1lY/AdiF6gw8QCoeTtU8/+T
-        5uaX99vbs0ClCAOgsz1gmuGGWFhkQKXxA5BNQBuvQ21uAGGoAa/P29sLQJXhBicsLHJgtkKFGGB8UKBC
-        hbADkA1ARe9xGQAK1GMWFipQYUwAVDAZrhibASBsbr4ZKowK0KINtwEQjBmtIJPRFSIHIho+jxKtQAEX
-        NAUwvB+KMeSAYZUC1gyNtsvYFIEVAAE2OSB+Do5WUALBIgnGeLwAw+0MuGwnCpubfwbH/XFzcwVy8Blj
-        YxEAaeUgI8Jx4+4AAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wAAADsABataJCQAAAxpJREFUWEe1Vy1wE0EUjkBUIBAIBAKBQCAQCAQzqbi7MExFRWUlAolA4Ja7iIoK
+        REUFAoFghohObjdEICIjEBEVkRURFREVFRUV5fvevlxzTS65JpdvZmeSt3vvb9/f1u6D0LhXUdJphrE7
+        iRLXDxN3xhUl9h9oNkzsYWDSt3q8GtRNbyuM7VcwH0HoDYRdQ+gQtL9R3PnBhd9d7J1i78qfcWMqUzcn
+        j5TNagiS9AMYnZMprYbg/bpJH+v2DOrm90Oc34ti94uK4rsL/P4MIx7okXIgI3zYUmt6gem81q3SiEz7
+        uV6V8Hhv3BPdWgwehPYDWhDE6UclrwzxSOIuJVZM+kLJ8yGWi3B30Wi6QMlrg8HLq8QaLfSEd7u9rlL4
+        BKGxL+kJrP7cmGDAYfOmCrcXIUraO5TBrFKSh6Saj/aekjYGSV2ka+4qqJFYXyLao9h+4lmxBPWgdHQr
+        3pk/T6kArvu7kiRSR0wZ/VuIdYVPgG+PqASDXsurMNzX/bmoSjjBcu15pbsIjE6Tkb+owlUpnGAWgNcY
+        fH/i/qXEDnVvBlULn8D3DzuAB9DV0FiUnkNeuD0PTPtNw3SfrbKUZQYGIXkyIM6YGkrPMC28iqVsM0wy
+        TzIglxIKKPbtLpN1lrLNkCmAe8AwYbtKz2FaCd4/S3SjabdXWcoyA3geY40ZhBY/TpU+g5wn0Cvu3dsL
+        kMnFFRxmRaEAm1BCr76VFQUQ9nRvLqpUgiXfy9Tihz++KCxBVUqESefAFz+dGT1jzHAYo4SwAOsqQaH4
+        lrNiS0m3xDINiZguMFBgS8mlUGhsFKdfvGVoEBsCKymFQ4kjJd2CroQCPaxLdkglVwbOASy9ED4szDg2
+        GhzAawfzAWY4Ja8NL9wN5e6XTcY8IDkqA2R7R8krg26n5RRe+tlGT+CDvgQLGhUt0K3SYGBPAk6sX2b5
+        XfiYkGEF7z17RWa0YFnascj4PIe7NeAWVdmlEG/oJAumzP+xDBPs53y0+q52zNquV4cz9BzeGCXqSmn4
+        V1O6y4oJAQO9V1+QWEn5OoZQWIwHbNlXca32H3O9CNmsZK6HAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
